@@ -363,11 +363,11 @@
           [{"any.xml/get",
             [{mode, round_robin},
              {service_names,
-              ["/tests/http_req/c.xml/get",
-               "/tests/http_req/java.xml/get",
-               "/tests/http_req/python.xml/get",
-               "/tests/http_req/python_c.xml/get",
-               "/tests/http_req/ruby.xml/get"]}]}]}],
+              ["c.xml/get",
+               "java.xml/get",
+               "python.xml/get",
+               "python_c.xml/get",
+               "ruby.xml/get"]}]}]}],
         immediate_closest,
         5000, 5000, 5000, [api], undefined, 1, 5, 300, []},
     {internal,
