@@ -1,6 +1,10 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:
 
+2014-01-14 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Add the add_prefix argument to cloudi_service_router
+
 2014-01-13 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * When an external service is using the request_timeout_adjustment
